--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^15.4.2",
     "react-infinite-calendar": "^2.2.0",
     "react-router": "^3.0.0",
+    "react-weather": "^0.1.3",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.0"
   },
